--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,15 @@
       <artifactId>javatuples</artifactId>
       <version>1.2</version>
     </dependency>
-  </dependencies>
 
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.9.8</version>
+    </dependency>
+
+
+  </dependencies>
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
