--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,11 @@
       <version>2.8.9</version>
     </dependency>
 
-
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.11.2</version>
+    </dependency>
   </dependencies>
 
   <build>
