--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
       <version>2.8.9</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>3.12.4</version>
+      <scope>test</scope>
+    </dependency>
 
   </dependencies>
 
