--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
     <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
     <dependency>
       <groupId>org.bouncycastle</groupId>
-      <artifactId>bcprov-jdk15on</artifactId>
+      <artifactId>bcpkix-jdk15on</artifactId>
       <version>1.70</version>
     </dependency>
 
@@ -58,7 +58,11 @@
       <version>2.8.9</version>
     </dependency>
 
-
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.11.2</version>
+    </dependency>
   </dependencies>
 
   <build>
