--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
       <artifactId>log4j-core</artifactId>
       <version>2.11.2</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.crypto.tink</groupId>
+      <artifactId>tink</artifactId>
+      <version>1.7.0</version>
+    </dependency>
   </dependencies>
 
   <build>
