--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.onqlave.onqlave-java</groupId>
-  <artifactId>onqlave-java</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <artifactId>onqlave-sdk</artifactId>
+  <version>1.1.1</version>
 
   <name>onqlave-java</name>
   <!-- FIXME change it to the project's website -->
