update workflow maven with profile

--- a/.github/workflows/publish_dev.yml
+++ b/.github/workflows/publish_dev.yml
@@ -41,4 +41,5 @@ jobs:
       - name: Publish package
         run: mvn --batch-mode deploy
         env:
+          PROFILE: dev
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
