--- a/.github/workflows/publish_prod.yml
+++ b/.github/workflows/publish_prod.yml
@@ -29,8 +29,8 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
           server-id: ossrh
-          server-username: ${{ secrets.MAVEN_USERNAME }}
-          server-password: ${{ secrets.MAVEN_PASSWORD }}
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_PASSWORD
 
       - name: Extract tag version
         id: extract_tag
@@ -44,4 +44,7 @@ jobs:
       - name: Publish package
         run: mvn --batch-mode deploy
         env:
+          PROFILE: prod
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
