--- a/.github/workflows/publish_dev.yml
+++ b/.github/workflows/publish_dev.yml
@@ -7,7 +7,8 @@ on:
 
 jobs:
   publish:
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && endsWith(github.event.base_ref, '/dev')
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') 
+    # && endsWith(github.event.base_ref, '/dev')
     runs-on: ubuntu-latest
     permissions:
       contents: read
