--- a/.github/workflows/publish_dev.yml
+++ b/.github/workflows/publish_dev.yml
@@ -7,8 +7,7 @@ on:
 
 jobs:
   publish:
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') 
-    # && endsWith(github.event.base_ref, '/dev')
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && endsWith(github.event.base_ref, '/dev')
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -38,7 +37,7 @@ jobs:
         # sed only version of project
         run: |
           sed -i "s/<projectVersion>.*<\/projectVersion>/<projectVersion>${{ steps.extract_tag.outputs.tag }}<\/projectVersion>/" pom.xml
-      
+
       - name: Publish package
         run: mvn --batch-mode deploy
         env:
