--- a/.github/workflows/publish_prod.yml
+++ b/.github/workflows/publish_prod.yml
@@ -40,7 +40,21 @@ jobs:
         # sed only version of project
         run: |
           sed -i "s/<projectVersion>.*<\/projectVersion>/<projectVersion>${{ steps.extract_tag.outputs.tag }}<\/projectVersion>/" pom.xml
-      
+
+      ############# GITHUB RELEASE ##############
+      - name: Extract release notes
+        id: extract-release-notes
+        uses: ffurrer2/extract-release-notes@v1
+
+      - name: "Create a GitHub release v${{ steps.extract_tag.outputs.tag }}"
+        uses: ncipollo/release-action@v1
+        with:
+          tag: "v${{ steps.extract_tag.outputs.tag }}"
+          name: "Release v${{ steps.extract_tag.outputs.tag }}"
+          body: |
+            ## Release notes:
+            ${{ steps.extract-release-notes.outputs.release_notes }}
+
       - name: Publish package
         run: mvn --batch-mode deploy
         env:
