--- a/.github/workflows/publish_test.yml
+++ b/.github/workflows/publish_test.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - feature/workflow
 
+permissions:
+  contents: write
+
 jobs:
   publish:
     # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && endsWith(github.event.base_ref, '/main')
