--- a/.github/workflows/publish_test.yml
+++ b/.github/workflows/publish_test.yml
@@ -50,18 +50,18 @@ jobs:
           sed -i "s/<projectVersion>.*<\/projectVersion>/<projectVersion>0.0.1<\/projectVersion>/" pom.xml
 
       ############# GITHUB RELEASE ##############
-      - name: Extract release notes
-        id: extract-release-notes
-        uses: ffurrer2/extract-release-notes@v1
+      # - name: Extract release notes
+      #   id: extract-release-notes
+      #   uses: ffurrer2/extract-release-notes@v1
 
-      - name: "Create a GitHub release v${{ steps.extract_tag.outputs.tag }}"
-        uses: ncipollo/release-action@v1
-        with:
-          tag: "v${{ steps.extract_tag.outputs.tag }}"
-          name: "Release v${{ steps.extract_tag.outputs.tag }}"
-          body: |
-            ## Release notes:
-            ${{ steps.extract-release-notes.outputs.release_notes }}
+      # - name: "Create a GitHub release v${{ steps.extract_tag.outputs.tag }}"
+      #   uses: ncipollo/release-action@v1
+      #   with:
+          # tag: "v${{ steps.extract_tag.outputs.tag }}"
+          # name: "Release v${{ steps.extract_tag.outputs.tag }}"
+          # body: |
+          #   ## Release notes:
+          #   ${{ steps.extract-release-notes.outputs.release_notes }}
 
       - name: Publish package
         run: mvn --batch-mode deploy
