--- a/.github/workflows/publish_prod.yml
+++ b/.github/workflows/publish_prod.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - 'v0.1.*'
 
+permissions:
+  contents: write
+
 jobs:
   publish:
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && endsWith(github.event.base_ref, '/main')
@@ -21,6 +24,11 @@ jobs:
         if: github.event_name != 'workflow_dispatch'
         run: echo "PR ${{ github.event.number }}"
       - uses: actions/checkout@v3
+
+      - name: git config
+        run: |
+          git config user.name "${GITHUB_ACTOR}"
+          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
 
       # java publish
       - name: Set up Maven Central Repository
@@ -55,10 +63,18 @@ jobs:
             ## Release notes:
             ${{ steps.extract-release-notes.outputs.release_notes }}
 
+      - id: install-secret-key
+        name: Install gpg secret key
+        run: |
+          # Install gpg secret key
+          cat <(echo -e "${{ secrets.OSSRH_GPG_SECRET_KEY }}") | gpg --batch --import
+          # Verify gpg secret key
+          gpg --list-secret-keys --keyid-format LONG
+
       - name: Publish package
-        run: mvn --batch-mode deploy
+        run: |
+          mvn --batch-mode --no-transfer-progress -Dgpg.passphrase="${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }}" clean deploy
         env:
           PROFILE: prod
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
-          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
