--- a/.github/workflows/publish_dev_test.yml
+++ b/.github/workflows/publish_dev_test.yml
@@ -8,7 +8,7 @@ jobs:
 #    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && endsWith(github.event.base_ref, '/dev')
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
     steps:
       - name: "print debug"
@@ -49,7 +49,6 @@ jobs:
       - name: "Create a GitHub release v0.0.3"
         uses: ncipollo/release-action@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
           tag: "v0.0.3"
           name: "Release v0.0.3"
           body: |
