--- a/.github/workflows/publish_prod_est.yml
+++ b/.github/workflows/publish_prod_est.yml
@@ -2,15 +2,16 @@
 name: Publish Development
 on:
   push:
-    tags:
-      - 'v0.0.*'
+
+permissions:
+  contents: write
 
 jobs:
   publish:
-#    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && endsWith(github.event.base_ref, '/dev')
+#    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && endsWith(github.event.base_ref, '/main')
     runs-on: ubuntu-latest
     permissions:
-      contents: write
+      contents: read
       packages: write
     steps:
       - name: "print debug"
@@ -33,6 +34,9 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
+          server-id: ossrh
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_PASSWORD
 
       - name: Extract tag version
         id: extract_tag
@@ -41,13 +45,23 @@ jobs:
       - name: Update pom.xml version
         # sed only version of project
         run: |
-          sed -i "s/<projectVersion>.*<\/projectVersion>/<projectVersion>0.0.3<\/projectVersion>/" pom.xml
+          sed -i "s/<projectVersion>.*<\/projectVersion>/<projectVersion>0.0.4<\/projectVersion>/" pom.xml
+
+      - id: install-secret-key
+        name: Install gpg secret key
+        run: |
+          # Install gpg secret key
+          cat <(echo -e "${{ secrets.OSSRH_GPG_SECRET_KEY }}") | gpg --batch --import
+          # Verify gpg secret key
+          gpg --list-secret-keys --keyid-format LONG
 
       - name: Publish package
-        run: mvn --batch-mode deploy
+        run: |
+          mvn --batch-mode --no-transfer-progress -Dgpg.passphrase="${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }}" clean deploy
         env:
-          PROFILE: dev
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PROFILE: prod
+          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
 
   release:
     needs: publish
@@ -68,8 +82,8 @@ jobs:
       - name: "Create a GitHub release v0.0.3"
         uses: ncipollo/release-action@v1
         with:
-          tag: "v0.0.3"
-          name: "Release v0.0.3"
+          tag: "v0.0.4"
+          name: "Release v0.0.4"
           body: |
             ## Release notes:
             ${{ steps.extract-release-notes.outputs.release_notes }}
