--- a/.github/workflows/publish_dev.yml
+++ b/.github/workflows/publish_dev.yml
@@ -3,7 +3,7 @@ name: Publish Development
 on:
   push:
     tags:
-      - 'v0.0.*'
+      - 'v0.*.*'
 
 jobs:
   publish:
@@ -42,9 +42,16 @@ jobs:
         env:
           PROFILE: dev
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      ############# GITHUB RELEASE ##############
+      - name: Extract release notes
+        id: extract-release-notes
+        uses: ffurrer2/extract-release-notes@v1
 
-  release:
-    needs: publish
-    uses: ./.github/workflows/release.yml
-    with:
-      tag: ${{ needs.publish.outputs.tag }}
+      - name: "Create a GitHub release v${{ inputs.tag }}"
+        uses: ncipollo/release-action@v1
+        with:
+          tag: "v${{ steps.extract_tag.outputs.tag }}"
+          name: "Release v${{ steps.extract_tag.outputs.tag }}"
+          body: |
+            ## Release notes:
+            ${{ steps.extract-release-notes.outputs.release_notes }}
